# versus-league-manager

./: Cargo.toml
src/: lib.rs
